# anofox-ml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benchmarks/: README.md  (+3 more)
crates/anofox-ml/: Cargo.toml
crates/anofox-ml-cluster/: Cargo.toml
crates/anofox-ml-cluster/src/: affinity_propagation.rs  agglomerative.rs  bgmm.rs  birch.rs  dbscan.rs  gmm.rs  hdbscan.rs  kmeans.rs  lib.rs  mean_shift.rs  mini_batch_kmeans.rs  optics.rs  spectral.rs
crates/anofox-ml-core/: Cargo.toml
crates/anofox-ml-core/src/: column_transformer.rs  feature_union.rs  float.rs  function_transformer.rs  lib.rs  persistence.rs  pipeline.rs  sparse.rs  traits.rs  utils.rs
crates/anofox-ml-discriminant/: Cargo.toml
crates/anofox-ml-discriminant/src/: lib.rs
crates/anofox-ml-discriminant/tests/: proptests.rs
crates/anofox-ml-ensemble/: Cargo.toml
crates/anofox-ml-ensemble/src/: adaboost_classifier.rs  adaboost_regressor.rs  bagging_classifier.rs  bagging_regressor.rs  calibrated_classifier.rs  extra_trees_classifier.rs  extra_trees_regressor.rs  gradient_boosting_classifier.rs  gradient_boosting_regressor.rs  hist_gradient_boosting.rs  isolation_forest.rs  lgbm.rs  lib.rs  random_forest_classifier.rs  random_forest_regressor.rs  stacking_classifier.rs  stacking_regressor.rs  voting_classifier.rs  voting_regressor.rs
crates/anofox-ml-gaussian-process/: Cargo.toml
crates/anofox-ml-gaussian-process/src/: classifier.rs  lib.rs
crates/anofox-ml-io/: Cargo.toml
crates/anofox-ml-io/src/: csv_reader.rs  lib.rs
crates/anofox-ml-linear/: Cargo.toml
crates/anofox-ml-linear/src/: passive_aggressive.rs  sgd_classifier.rs  sgd_regressor.rs
crates/anofox-ml-manifold/: Cargo.toml
crates/anofox-ml-manifold/src/: isomap.rs  lib.rs  lle.rs  tsne.rs
crates/anofox-ml-metrics/: Cargo.toml
crates/anofox-ml-metrics/src/: classification.rs  classification_extended.rs  classification_extra.rs  clustering.rs  clustering_extra.rs  curves.rs  lib.rs  regression.rs  regression_extended.rs  regression_extra.rs
crates/anofox-ml-naive-bayes/: Cargo.toml
crates/anofox-ml-naive-bayes/src/: bernoulli_nb.rs  gaussian_nb.rs  lib.rs  multinomial_nb.rs
crates/anofox-ml-neighbors/: Cargo.toml
crates/anofox-ml-neighbors/src/: distance.rs  kdtree.rs  knn_classifier.rs  knn_regressor.rs  lib.rs  lof.rs
crates/anofox-ml-neural-networks/: Cargo.toml
crates/anofox-ml-neural-networks/src/: activation.rs  lib.rs  mlp_classifier.rs  mlp_regressor.rs  network.rs  solver.rs  utils.rs
crates/anofox-ml-preprocessing/: Cargo.toml
crates/anofox-ml-preprocessing/src/: binarizer.rs  cca.rs  fast_ica.rs  kbins_discretizer.rs  kernel_pca.rs  label_encoder.rs  lib.rs  max_abs_scaler.rs  minmax_scaler.rs  mutual_information.rs  nmf.rs  normalizer.rs  one_hot_encoder.rs  ordinal_encoder.rs  pca.rs  pls.rs  polynomial_features.rs  power_transformer.rs  quantile_transformer.rs  rfe.rs  robust_scaler.rs  select_from_model.rs  select_k_best.rs  simple_imputer.rs  standard_scaler.rs  truncated_svd.rs  variance_threshold.rs
crates/anofox-ml-python/: Cargo.toml  pyproject.toml
crates/anofox-ml-python/src/: cluster.rs  ensemble.rs  helpers.rs  lib.rs  manifold.rs  metrics.rs  naive_bayes.rs  neighbors.rs  neural_net.rs  preprocessing.rs  svm.rs  trees.rs
crates/anofox-ml-regression/: Cargo.toml
crates/anofox-ml-regression/src/: bayesian_ridge.rs  convert.rs  elastic_net.rs  elastic_net_cv.rs  glm.rs  huber.rs  isotonic.rs  kernel_ridge.rs  lars.rs  lasso.rs  lasso_cv.rs  lib.rs  logistic.rs  ols.rs  omp.rs  quantile.rs  ridge.rs  ridge_cv.rs  robust.rs  transformed_target.rs  tweedie.rs  wls.rs
crates/anofox-ml-regression/tests/: proptests.rs
crates/anofox-ml-svm/: Cargo.toml
crates/anofox-ml-svm/src/: kernel.rs  lib.rs  linear_svc.rs  linear_svr.rs  nu_svc.rs  nu_svr.rs  one_class_svm.rs  svc.rs  svr.rs
crates/anofox-ml-text/: Cargo.toml
crates/anofox-ml-text/src/: lib.rs
crates/anofox-ml-trees/: Cargo.toml
crates/anofox-ml-trees/src/: classifier.rs  lib.rs  node.rs  regressor.rs  split.rs
crates/anofox-ml/benches/: benchmarks.rs
crates/anofox-ml/examples/: iris_classification.rs  kmeans_blobs.rs  tfidf_sparse.rs
crates/anofox-ml/src/: lib.rs
crates/anofox-ml/tests/: golden_accuracy_parity.rs  golden_agglomerative.rs  golden_bayesian_ridge.rs  golden_dbscan.rs  golden_decision_tree.rs  golden_decomposition.rs  golden_discriminant.rs  golden_ensemble_batch.rs  golden_feature_selection.rs  golden_feature_selection_batch.rs  golden_gmm.rs  golden_gp.rs  golden_gradient_boosting.rs  golden_hist_gb.rs  golden_kernel_ridge.rs  golden_kmeans.rs  golden_knn.rs  golden_lars.rs  golden_lgbm.rs  golden_lgbm_edge_cases.rs  golden_lgbm_round2.rs  golden_metrics.rs  golden_metrics_extra.rs  golden_metrics_round2.rs  golden_mini_batch_kmeans.rs  golden_model_selection.rs  golden_multi_output.rs  golden_naive_bayes.rs  golden_naive_bayes_extra.rs  golden_omp.rs  golden_outlier.rs  golden_passive_aggressive.rs  golden_pca.rs  golden_permutation_importance.rs  golden_pls.rs  golden_preprocessing.rs  golden_preprocessing_extra.rs  golden_preprocessing_round2.rs  golden_random_forest.rs  golden_regression_batch.rs  (+11 more)
crates/rustml-cluster/: Cargo.toml
crates/rustml-cluster/src/: affinity_propagation.rs  agglomerative.rs  bgmm.rs  birch.rs  dbscan.rs  gmm.rs  hdbscan.rs  kmeans.rs  lib.rs  mean_shift.rs  mini_batch_kmeans.rs  optics.rs  spectral.rs
crates/rustml-core/: Cargo.toml
crates/rustml-core/src/: column_transformer.rs  error.rs  feature_union.rs  float.rs  function_transformer.rs  halving.rs  inspection.rs  lib.rs  multi_output.rs  persistence.rs  pipeline.rs  traits.rs  utils.rs
crates/rustml-discriminant/: Cargo.toml
crates/rustml-discriminant/src/: lib.rs
crates/rustml-discriminant/tests/: proptests.rs
crates/rustml-ensemble/: Cargo.toml
crates/rustml-gaussian-process/: Cargo.toml
crates/rustml-io/: Cargo.toml
crates/rustml-linear/: Cargo.toml
crates/rustml-manifold/: Cargo.toml
crates/rustml-metrics/: Cargo.toml
crates/rustml-naive-bayes/: Cargo.toml
(+342 files in other folders)
