[workspace]
resolver = "2"
members = [
    "crates/rustml-core",
    "crates/rustml-metrics",
    "crates/rustml-preprocessing",
    "crates/rustml-neighbors",
    "crates/rustml-trees",
    "crates/rustml-ensemble",
    "crates/rustml-cluster",
    "crates/rustml-naive-bayes",
    "crates/rustml-discriminant",
    "crates/rustml-io",
    "crates/rustml-svm",
    "crates/rustml-neural-networks",
    "crates/rustml-regression",
    "crates/rustml-linear",
    "crates/rustml-python",
    "crates/rustml",
]

[workspace.dependencies]
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
rand = "0.8"
rayon = "1.10"
proptest = "1.4"
bincode = "1.3"
