[workspace]
resolver = "2"
members = [
    "crates/anofox-ml-core",
    "crates/anofox-ml-metrics",
    "crates/anofox-ml-preprocessing",
    "crates/anofox-ml-neighbors",
    "crates/anofox-ml-trees",
    "crates/anofox-ml-ensemble",
    "crates/anofox-ml-cluster",
    "crates/anofox-ml-naive-bayes",
    "crates/anofox-ml-discriminant",
    "crates/anofox-ml-text",
    "crates/anofox-ml-gaussian-process",
    "crates/anofox-ml-manifold",
    "crates/anofox-ml-io",
    "crates/anofox-ml-svm",
    "crates/anofox-ml-neural-networks",
    "crates/anofox-ml-regression",
    "crates/anofox-ml-linear",
    "crates/anofox-ml-python",
    "crates/anofox-ml",
]

# Shared package metadata. Every publishable crate inherits version, license,
# repository, etc. via `field.workspace = true`. Bumping the version here
# updates every crate at once — only do that between full-stack releases.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/anofox-ml"
homepage = "https://github.com/sipemu/anofox-ml"
readme = "README.md"
keywords = ["machine-learning", "ml", "scikit-learn", "classification", "regression"]
categories = ["science", "algorithms"]
rust-version = "1.87"
authors = ["Simon Müller <sm@data-zoo.de>"]

[workspace.dependencies]
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
rand = "0.8"
rayon = "1.10"
proptest = "1.4"
bincode = "1.3"
faer = "0.23"

# Internal workspace crates. Each carries both `path` (for local builds)
# and `version` (for crates.io); without `version` cargo refuses to
# publish. Bump these in lock-step with `workspace.package.version`.
anofox-ml-core = { version = "0.1.0", path = "crates/anofox-ml-core" }
anofox-ml-metrics = { version = "0.1.0", path = "crates/anofox-ml-metrics" }
anofox-ml-preprocessing = { version = "0.1.0", path = "crates/anofox-ml-preprocessing" }
anofox-ml-neighbors = { version = "0.1.0", path = "crates/anofox-ml-neighbors" }
anofox-ml-trees = { version = "0.1.0", path = "crates/anofox-ml-trees" }
anofox-ml-ensemble = { version = "0.1.0", path = "crates/anofox-ml-ensemble" }
anofox-ml-cluster = { version = "0.1.0", path = "crates/anofox-ml-cluster" }
anofox-ml-naive-bayes = { version = "0.1.0", path = "crates/anofox-ml-naive-bayes" }
anofox-ml-discriminant = { version = "0.1.0", path = "crates/anofox-ml-discriminant" }
anofox-ml-text = { version = "0.1.0", path = "crates/anofox-ml-text" }
anofox-ml-gaussian-process = { version = "0.1.0", path = "crates/anofox-ml-gaussian-process" }
anofox-ml-manifold = { version = "0.1.0", path = "crates/anofox-ml-manifold" }
anofox-ml-io = { version = "0.1.0", path = "crates/anofox-ml-io" }
anofox-ml-svm = { version = "0.1.0", path = "crates/anofox-ml-svm" }
anofox-ml-neural-networks = { version = "0.1.0", path = "crates/anofox-ml-neural-networks" }
anofox-ml-regression = { version = "0.1.0", path = "crates/anofox-ml-regression" }
anofox-ml-linear = { version = "0.1.0", path = "crates/anofox-ml-linear" }
