[package]
name = "anofox-ml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Core traits and types for the anofox-ml machine learning library"
documentation = "https://docs.rs/anofox-ml-core"
keywords = ["machine-learning", "ml", "scikit-learn", "traits", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
