[package]
name = "anofox-ml-gaussian-process"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Gaussian Process regression + classification (Laplace) for the anofox-ml library"
documentation = "https://docs.rs/anofox-ml-gaussian-process"
keywords = ["machine-learning", "gaussian-process", "regression", "bayesian", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
serde = { workspace = true }
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
faer = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
