[package]
name = "anofox-ml-linear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Stochastic Gradient Descent linear models (SGDClassifier, SGDRegressor, PassiveAggressive) for anofox-ml"
documentation = "https://docs.rs/anofox-ml-linear"
keywords = ["machine-learning", "sgd", "linear", "classification", "regression"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
