[package]
name = "anofox-ml-neighbors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "K-nearest neighbors classifiers and regressors with KD-tree for the anofox-ml library"
documentation = "https://docs.rs/anofox-ml-neighbors"
keywords = ["machine-learning", "knn", "classification", "regression", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
