[package]
name = "anofox-ml-neural-networks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Multi-layer perceptron neural networks for the anofox-ml library"
documentation = "https://docs.rs/anofox-ml-neural-networks"
keywords = ["machine-learning", "neural-network", "mlp", "deep-learning", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
