[package]
name = "anofox-ml-preprocessing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Feature preprocessing, scaling, and PCA for the anofox-ml machine learning library"
documentation = "https://docs.rs/anofox-ml-preprocessing"
keywords = ["machine-learning", "preprocessing", "pca", "scaler", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
faer = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
