[package]
name = "anofox-ml-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Support Vector Machines (SVC, SVR, NuSVC, NuSVR, LinearSVC, LinearSVR, OneClassSVM) for anofox-ml"
documentation = "https://docs.rs/anofox-ml-svm"
keywords = ["machine-learning", "svm", "classification", "kernel-methods", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
