[package]
name = "anofox-ml-trees"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "CART decision tree classifiers and regressors for the anofox-ml machine learning library"
documentation = "https://docs.rs/anofox-ml-trees"
keywords = ["machine-learning", "decision-tree", "cart", "classification", "regression"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
