[package]
name = "anofox-ml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "scikit-learn-style machine learning umbrella crate — re-exports every anofox-ml-* subcrate under a single API"
documentation = "https://docs.rs/anofox-ml"
keywords = ["machine-learning", "ml", "scikit-learn", "classification", "regression"]
categories = ["science", "algorithms"]

[dependencies]
anofox-ml-core = { workspace = true }
anofox-ml-metrics = { workspace = true }
anofox-ml-preprocessing = { workspace = true }
anofox-ml-neighbors = { workspace = true }
anofox-ml-trees = { workspace = true }
anofox-ml-ensemble = { workspace = true }
anofox-ml-cluster = { workspace = true }
anofox-ml-naive-bayes = { workspace = true }
anofox-ml-discriminant = { workspace = true }
anofox-ml-text = { workspace = true }
anofox-ml-gaussian-process = { workspace = true }
anofox-ml-manifold = { workspace = true }
anofox-ml-io = { workspace = true }
anofox-ml-svm = { workspace = true }
anofox-ml-neural-networks = { workspace = true }
anofox-ml-regression = { workspace = true }
anofox-ml-linear = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
# Phase D: linfa as a head-to-head Rust ML comparison in the benchmarks.
# All linfa-* crates pin ndarray = "0.16", matching the workspace, so the
# resolver doesn't fork. Bench-only — no runtime dep on linfa for users.
linfa = "0.8"
linfa-clustering = "0.8"
linfa-linear = "0.8"
linfa-elasticnet = "0.8"
linfa-logistic = "0.8"
linfa-bayes = "0.8"
linfa-trees = "0.8"

[[bench]]
name = "benchmarks"
harness = false

# codspeed-criterion-compat is a drop-in for criterion 0.5: same API, works
# as plain criterion on `cargo bench`, but when codspeed's runner sets the
# CODSPEED_CARGO_WORKSPACE_ROOT env var it routes measurements through
# cachegrind for deterministic instruction counts. Lets CI track perf
# regressions without wall-time noise.
[dev-dependencies.codspeed-criterion-compat]
version = "4.7"
features = ["html_reports"]
