[package]
name = "rustml-cluster"
version = "0.1.0"
edition = "2021"
description = "KMeans and DBSCAN clustering algorithms for the RustML machine learning library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-cluster"
readme = "../../README.md"
keywords = ["machine-learning", "clustering", "kmeans", "dbscan", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
ndarray = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
