[package]
name = "rustml-discriminant"
version = "0.1.0"
edition = "2021"
description = "Linear and Quadratic Discriminant Analysis for the RustML library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-discriminant"
readme = "../../README.md"
keywords = ["machine-learning", "lda", "qda", "classification", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
serde = { workspace = true }
rustml-core = { path = "../rustml-core" }
ndarray = { workspace = true }
faer = "0.23"
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
