[package]
name = "rustml-discriminant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Linear and Quadratic Discriminant Analysis for the RustML library"
documentation = "https://docs.rs/rustml-discriminant"
keywords = ["machine-learning", "lda", "qda", "classification", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
serde = { workspace = true }
rustml-core = { workspace = true }
ndarray = { workspace = true }
faer = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
