[package]
name = "rustml-ensemble"
version = "0.1.0"
edition = "2021"

[dependencies]
rustml-core = { path = "../rustml-core" }
rustml-trees = { path = "../rustml-trees" }
ndarray = { workspace = true }
num-traits = { workspace = true }
rand = "0.8"
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
