[package]
name = "rustml-ensemble"
version = "0.1.0"
edition = "2021"
description = "Random forest and gradient boosting ensemble methods for the RustML library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-ensemble"
readme = "../../README.md"
keywords = ["machine-learning", "random-forest", "gradient-boosting", "ensemble", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
rustml-trees = { path = "../rustml-trees" }
ndarray = { workspace = true }
num-traits = { workspace = true }
rand = "0.8"
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
