[package]
name = "rustml-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Random forest and gradient boosting ensemble methods for the RustML library"
documentation = "https://docs.rs/rustml-ensemble"
keywords = ["machine-learning", "random-forest", "gradient-boosting", "ensemble", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
rustml-core = { workspace = true }
rustml-trees = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
