[package]
name = "rustml-gaussian-process"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Gaussian Process regression + classification (Laplace) for the RustML library"
documentation = "https://docs.rs/rustml-gaussian-process"
keywords = ["machine-learning", "gaussian-process", "regression", "bayesian", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
serde = { workspace = true }
rustml-core = { workspace = true }
ndarray = { workspace = true }
faer = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
