[package]
name = "rustml-io"
version = "0.1.0"
edition = "2021"
description = "CSV data loading with ndarray integration for the RustML machine learning library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-io"
readme = "../../README.md"
keywords = ["machine-learning", "csv", "data-loading", "io", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
ndarray = { workspace = true }
num-traits = { workspace = true }
csv = "1.3"

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
