[package]
name = "rustml-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "CSV data loading with ndarray integration for the RustML machine learning library"
documentation = "https://docs.rs/rustml-io"
keywords = ["machine-learning", "csv", "data-loading", "io", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
rustml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
csv = "1.3"

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
