[package]
name = "rustml-linear"
version = "0.1.0"
edition = "2021"
description = "Stochastic Gradient Descent linear models for the RustML machine learning library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
readme = "../../README.md"
keywords = ["machine-learning", "sgd", "linear", "classification", "regression"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
