[package]
name = "rustml-manifold"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Manifold learning (MDS, Isomap, LLE, t-SNE) for the RustML library"
documentation = "https://docs.rs/rustml-manifold"
keywords = ["machine-learning", "manifold", "tsne", "isomap", "dimensionality-reduction"]
categories = ["science", "algorithms"]

[dependencies]
serde = { workspace = true }
rustml-core = { workspace = true }
ndarray = { workspace = true }
faer = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
