[package]
name = "rustml-metrics"
version = "0.1.0"
edition = "2021"
description = "Classification and regression metrics for the RustML machine learning library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-metrics"
readme = "../../README.md"
keywords = ["machine-learning", "metrics", "accuracy", "f1-score", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
ndarray = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
