[package]
name = "rustml-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Classification and regression metrics for the RustML machine learning library"
documentation = "https://docs.rs/rustml-metrics"
keywords = ["machine-learning", "metrics", "accuracy", "f1-score", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
rustml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
