[package]
name = "rustml-naive-bayes"
version = "0.1.0"
edition = "2021"
description = "Gaussian Naive Bayes classifier for the RustML machine learning library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sipemu/rustml"
documentation = "https://docs.rs/rustml-naive-bayes"
readme = "../../README.md"
keywords = ["machine-learning", "naive-bayes", "classification", "gaussian", "ndarray"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rustml-core = { path = "../rustml-core" }
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
serde = { workspace = true }

[dev-dependencies]
approx = "0.5"
