[package]
name = "rustml-naive-bayes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true
authors.workspace = true
description = "Gaussian / Multinomial / Bernoulli Naive Bayes classifiers for the RustML library"
documentation = "https://docs.rs/rustml-naive-bayes"
keywords = ["machine-learning", "naive-bayes", "classification", "gaussian", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
rustml-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
